src/styles/Footer.css
.footer {
  height: 40px;
  width: 100vw;
  right: 0;
  bottom: 0;
  position: fixed;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  background: -webkit-linear-gradient(to bottom, #044563, #042f4f);
  background: linear-gradient(to bottom, #044563, #042f4f);
  font-size: 14px;
  color: #5dade2;
  flex-shrink: 0;
  float: none;
  clear: both;
  z-index: 1000 !important;
  overflow-y: hidden;
  overflow-x: hidden;
}

.footer h6 {
  text-align: left;
  font-size: 14px;
  margin-top: 10px;
}
.social-container {
  right: 0;
  position: fixed;
  margin-top: -28px;
  margin-right: 16px;
}
a.social {
  margin: 0 4px;
  transition: transform 250ms;
  display: inline-block;
}
a.social:hover {
  transform: translateY(-2px);
}
a.github {
  color: #979a9a;
}
a.linkedin {
  color: #0e76a8;
}

